--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ color:purple;
 <div class="box">
 
 <font size="3">フォントの改変× 二次配布×　営利目的での使用○</font></p>
-<font size="3">クレジット任意　表示時は(Jfnfont!bykatarui)</font></p>
+<font size="3">クレジット表示時は(Jfnfont!bykatarui)</font></p>
 
 <font size="3">Altered fontDo not distribute fonts secondarily</font></p>
 
