--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@ color:purple;
 
 
 
-
-
-
-
-
-
 </style>
 
 <p style="text-align: center;">
@@ -55,6 +49,8 @@ color:purple;
 
 <font size="3">フォントの改変× 二次配布×　営利目的での使用○</font></p>
 <font size="3">クレジット表示時は(Jfnfont!bykatarui)</font></p>
+
+<a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス</a>の下に提供されています。
 
 <font size="3">Altered fontDo not distribute fonts secondarily</font></p>
 
