--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <p style="text-align:center">ダウンロードはこちら</p>
 
-<p style="text-align:center"><font size="3">β版だから少し変なのは許して()</p>
+<p style="text-align:center"><font size="3">α版だから少し変なのは許して()</p>
 <p style="text-align:center">↓</p>
 
 
@@ -23,7 +23,7 @@
 }
 
 .box{
-  color: #f89174;
+  color: red;
   position: absolute;
   top: 100%;
   transform: translateY(-50%) /* ズレを補修 */ 
@@ -32,7 +32,7 @@
 
 
 ul{
-color:purple;
+color:blue;
 }
 
 
@@ -40,15 +40,25 @@ color:purple;
 
 </style>
 
+
+
+
 <p style="text-align: center;">
-<a href="Fnfontv0.1_mod.ttf">ベータ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a>
-</p>
+<a href="Jfnfontalpha.ttf">(最新版)アルファ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+
+<p style="text-align: center;">
+<a href="Jfhontbeta.ttf">ベータ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+
+
+<p style="text-align: center;">
+<a href="Boy~frend.pdf">おまけ<i class="fa fa-hand-o-right" aria-hidden="true"></i></a>
+
 
 
 <div class="box">
 
 <font size="3">フォントの改変× 二次配布×　営利目的での使用○</font></p>
-<font size="3">クレジット表示時は(Jfnfont!bykatarui)</font></p>
+<font size="3">クレジット表示時は(Jfnfont!　katarui)</font></p>
 
 <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス</a>の下に提供されています。
 
@@ -62,10 +72,11 @@ color:purple;
 <div style="width: 50%; height: 200px; overflow-y: scroll; border: 1px blue solid; margin: 300px 480px;">
 <p style="text-align:center">アップデートログ</p>
 <ul>
+<li>予定　日本語フォントアルファ版公開(一年生漢字対応　細部の修正)</li>
 <li>2022/07/03日本語フォントベータ版公開!!(ひらがなカタカナ対応)</li>
+
 </ul>
 </div>
-
 
 
 
