--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ color:blue;
 <div style="width: 50%; height: 200px; overflow-y: scroll; border: 1px blue solid; margin: 300px 480px;">
 <p style="text-align:center">アップデートログ</p>
 <ul>
-<li>予定　日本語フォントアルファ版公開(一年生漢字対応　細部の修正)</li>
+<li>2022/07/07日本語フォントアルファ版公開(一年生漢字対応　細部の修正)</li>
 <li>2022/07/03日本語フォントベータ版公開!!(ひらがなカタカナ対応)</li>
 
 </ul>
