--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <p style="text-align:center">ダウンロードはこちら</p>
 
-<p style="text-align:center"><font size="3">α版だから少し変なのは許して()</p>
+
 <p style="text-align:center">↓</p>
 
 
@@ -19,7 +19,7 @@
 }
 
  h1 {
-   color : purple
+   color : blue
 }
 
 .box{
@@ -41,13 +41,15 @@ color:blue;
 </style>
 
 
+<p style="text-align: center;">
+<a href="Jfnfontv01.ttf">(最新)正式版version0.1Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
 
 
 <p style="text-align: center;">
-<a href="Jfnfontalpha.ttf">(最新版)アルファ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+<a href="Jfnfontalpha.ttf">アルファ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
 
 <p style="text-align: center;">
-<a href="Jfhontbeta.ttf">ベータ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+<a href="Jfnfontbeta.ttf">ベータ版Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
 
 
 <p style="text-align: center;">
@@ -60,7 +62,7 @@ color:blue;
 <font size="3">フォントの改変× 二次配布×　営利目的での使用○</font></p>
 <font size="3">クレジット表示時は(Jfnfont!　katarui)</font></p>
 
-<a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス</a>の下に提供されています。
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">クリエイティブ・コモンズ 表示 - 非営利 - 改変禁止 4.0 国際 ライセンス</a>の下に提供されています。
 
 <font size="3">Altered fontDo not distribute fonts secondarily</font></p>
 
@@ -72,6 +74,7 @@ color:blue;
 <div style="width: 50%; height: 200px; overflow-y: scroll; border: 1px blue solid; margin: 300px 480px;">
 <p style="text-align:center">アップデートログ</p>
 <ul>
+<li>2022/07/08日本語フォント正式版V0.1公開(二年生漢字対応　アルファベットひらがなカタカナのサイズ修正)</li>
 <li>2022/07/07日本語フォントアルファ版公開(一年生漢字対応　細部の修正)</li>
 <li>2022/07/03日本語フォントベータ版公開!!(ひらがなカタカナ対応)</li>
 
