--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style>
  body {
   
-   background-image:url("home.png");
+   background-image:url("back.png");
    background-size: auto;
 }
  p {
