--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ color:blue;
 
 
 <p style="text-align: center;">
-<a href="Jfnfontv01.ttf">(最新)正式版version0.1Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+<a href="Jfnfontv01.ttf">(最新)version0.1Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
 
 
 <p style="text-align: center;">
@@ -74,7 +74,7 @@ color:blue;
 <div style="width: 50%; height: 200px; overflow-y: scroll; border: 1px blue solid; margin: 300px 480px;">
 <p style="text-align:center">アップデートログ</p>
 <ul>
-<li>2022/07/08日本語フォント正式版V0.1公開(二年生漢字対応　アルファベットひらがなカタカナのサイズ修正)</li>
+<li>2022/07/08日本語フォントV0.1公開(二年生漢字対応　アルファベットひらがなカタカナのサイズ修正)</li>
 <li>2022/07/07日本語フォントアルファ版公開(一年生漢字対応　細部の修正)</li>
 <li>2022/07/03日本語フォントベータ版公開!!(ひらがなカタカナ対応)</li>
 
