--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <p style="text-align:center">↓</p>
 
+<p style="text-align: center;">
+<a href="Jfnfontv02.ttf">(最新)version0.2Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+
+<p style="text-align:center">古いバージョン↓</p>
 
 <style>
  body {
@@ -15,11 +19,15 @@
    background-size: auto;
 }
  p {
-   color : gray
+   color : #b0c4de
+}
+
+a {
+   color : #b0c4de
 }
 
  h1 {
-   color : blue
+   color : #b0c4de
 }
 
 .box{
@@ -32,7 +40,7 @@
 
 
 ul{
-color:blue;
+color:#b0c4de;
 }
 
 
@@ -42,7 +50,7 @@ color:blue;
 
 
 <p style="text-align: center;">
-<a href="Jfnfontv01.ttf">(最新)version0.1Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
+<a href="Jfnfontv01.ttf">version0.1Jfnfontダウンロード<i class="fa fa-hand-o-right" aria-hidden="true"></i></a></p>
 
 
 <p style="text-align: center;">
@@ -62,7 +70,7 @@ color:blue;
 <font size="3">フォントの改変× 二次配布×　営利目的での使用○</font></p>
 <font size="3">クレジット表示時は(Jfnfont!　katarui)</font></p>
 
-<a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">クリエイティブ・コモンズ 表示 - 改変禁止 4.0 国際 ライセンス</a>の下に提供されています。
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="クリエイティブ・コモンズ・ライセンス" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />この 作品 は <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">クリエイティブ・コモンズ 表示 - 非営利 - 改変禁止 4.0 国際 ライセンス</a>の下に提供されています。
 
 <font size="3">Altered fontDo not distribute fonts secondarily</font></p>
 
@@ -71,9 +79,10 @@ color:blue;
 
 {}
 
-<div style="width: 50%; height: 200px; overflow-y: scroll; border: 1px blue solid; margin: 300px 480px;">
+<div style="width: 50%; height: 200px; overflow-y: scroll; border: 1px blue solid; margin: 180px 480px;">
 <p style="text-align:center">アップデートログ</p>
 <ul>
+<li>2022/07/14日本語フォントV0.2公開(三年生漢字対応　メモ帳で使えないバグ修正　サイズ修正)</li>
 <li>2022/07/08日本語フォントV0.1公開(二年生漢字対応　アルファベットひらがなカタカナのサイズ修正)</li>
 <li>2022/07/07日本語フォントアルファ版公開(一年生漢字対応　細部の修正)</li>
 <li>2022/07/03日本語フォントベータ版公開!!(ひらがなカタカナ対応)</li>
