--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <style>
  body {
   
-   background-image:url("back.png");
+   background-image:url("backbone.png");
    background-size: auto;
 }
  p {
